Using only one cmakelists.txt

--- a/invesalius_cy/CMakeLists.txt
+++ b/invesalius_cy/CMakeLists.txt
@@ -1,15 +1,19 @@
+cmake_minimum_required(VERSION 3.5...3.22)
+project(InVesalius)
+
 find_package(Cython REQUIRED)
 find_package(NumPy REQUIRED)
 find_package(PythonExtensions REQUIRED)
 find_package(OpenMP REQUIRED)
-include_directories(${NumPy_INCLUDE_DIRS})
 
 set(cython_modules cy_mesh floodfill interpolation mips transforms)
 
 foreach(cython_module ${cython_modules})
-  add_cython_target(${cython_module} PY3 CXX)
-  add_library(${cython_module} MODULE ${${cython_module}})
-  target_link_libraries(${cython_module} OpenMP::OpenMP_CXX)
-  python_extension_module(${cython_module})
-  install(TARGETS ${cython_module} DESTINATION invesalius_cy)
+  set(module_name "${cython_module}")
+  add_cython_target(${module_name} ${cython_module}.pyx PY3 CXX)
+  add_library(${module_name} MODULE ${${module_name}})
+  target_link_libraries(${module_name} OpenMP::OpenMP_CXX)
+  target_include_directories(${module_name} PRIVATE "." ${PYTHON_INCLUDE_DIRS} ${NumPy_INCLUDE_DIRS})
+  python_extension_module(${module_name})
+  install(TARGETS ${module_name} DESTINATION invesalius_cy)
 endforeach()
