--- a/.github/workflows/compile_invesalius_cy_windows.yml
+++ b/.github/workflows/compile_invesalius_cy_windows.yml
@@ -59,9 +59,6 @@ jobs:
   publish:
     needs: [build_invesalius_cy]
     runs-on: ubuntu-latest
-    env:
-      GH_REPO: ${{ github.repository }}
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     permissions:
       contents: write
 
@@ -72,9 +69,14 @@ jobs:
 
       - uses: actions/download-artifact@v3
 
-      - name: publish nightly
+      - name: creating zip
         run: |
           sudo apt-get update
           sudo apt-get install -y zip
           zip -r compiled_invesalius_cy.zip compiled_invesalius_cy
-          gh release create nightly --prerelease --notes nightly --title "Nightly" --target $GITHUB_SHA compiled_invesalius_cy.zip
+
+      - uses: pyTooling/Actions/releaser@r0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            compiled_invesalius_cy.zip
