--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
-name = "InVesalius"
-version = "3.1.99998"
+name = "invesalius"
+version = "0.1.0"
 description = "3D medical imaging reconstruction software"
+authors = [
+    { name = "Thiago Franco de Moraes", email = "totonixsame@gmail.com" }
+]
 keywords = [
   "medical imaging",
   "dicom",
@@ -9,11 +12,52 @@ keywords = [
   "3D printing",
   "neuronavigation",
 ]
-license = { file = "LICENSE.txt" }
+dependencies = [
+    "wxpython>=4.2.1",
+    "pyopengl>=3.1.7",
+    "pyopengl-accelerate>=3.1.7",
+    "numpy>=1.26.4",
+    "scipy>=1.13.0",
+    "matplotlib>=3.8.4",
+    "pillow>=10.3.0",
+    "imageio>=2.34.1",
+    "nibabel>=5.2.1",
+    "scikit-image>=0.23.2",
+    "python-gdcm>=3.0.24.1",
+    "vtk>=9.3.0",
+    "torch>=2.3.0",
+    "cython>=3.0.10",
+    "pypubsub>=4.0.3",
+    "h5py>=3.11.0",
+    "psutil>=5.9.8",
+    "pyserial>=3.5",
+    "pyacvd>=0.2.11",
+    "setuptools>=69.5.1",
+]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">= 3.8"
 
-[tool.setuptools]
+[project.scripts]
+inv = 'invesalius.app:main'
+
+[build-system]
+requires = ["scikit-build-core",  "cython >= 3.0.2", "numpy >= 1.26.4"]
+build-backend = "scikit_build_core.build"
+
+[tool.scikit-build]
+experimental = true
+
+[tool.meson-python]
+limited-api = true
+
+[tool.rye]
+managed = true
+dev-dependencies = []
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
 packages = ["invesalius", "invesalius_cy"]
 
 [tool.mypy]
