--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "invesalius"
 version = "0.1.0"
 description = "3D medical imaging reconstruction software"
 authors = [
-    { name = "Thiago Franco de Moraes", email = "totonixsame@gmail.com" }
+  { name = "Thiago Franco de Moraes", email = "totonixsame@gmail.com" },
 ]
 keywords = [
   "medical imaging",
@@ -13,26 +13,26 @@ keywords = [
   "neuronavigation",
 ]
 dependencies = [
-    "wxpython>=4.2.1",
-    "pyopengl>=3.1.7",
-    "pyopengl-accelerate>=3.1.7",
-    "numpy>=1.26.4",
-    "scipy>=1.13.0",
-    "matplotlib>=3.8.4",
-    "pillow>=10.3.0",
-    "imageio>=2.34.1",
-    "nibabel>=5.2.1",
-    "scikit-image>=0.23.2",
-    "python-gdcm>=3.0.24.1",
-    "vtk>=9.3.0",
-    "torch>=2.3.0",
-    "cython>=3.0.10",
-    "pypubsub>=4.0.3",
-    "h5py>=3.11.0",
-    "psutil>=5.9.8",
-    "pyserial>=3.5",
-    "pyacvd>=0.2.11",
-    "setuptools>=69.5.1",
+  "wxpython>=4.2.1",
+  "pyopengl>=3.1.7",
+  "pyopengl-accelerate>=3.1.7",
+  "numpy>=1.26.4",
+  "scipy>=1.13.0",
+  "matplotlib>=3.8.4",
+  "pillow>=10.3.0",
+  "imageio>=2.34.1",
+  "nibabel>=5.2.1",
+  "scikit-image>=0.23.2",
+  "python-gdcm>=3.0.24.1",
+  "vtk>=9.3.0",
+  "torch>=2.3.0",
+  "cython>=3.0.10",
+  "pypubsub>=4.0.3",
+  "h5py>=3.11.0",
+  "psutil>=5.9.8",
+  "pyserial>=3.5",
+  "pyacvd>=0.2.11",
+  "setuptools>=69.5.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -41,14 +41,11 @@ requires-python = ">= 3.8"
 inv = 'invesalius.app:main'
 
 [build-system]
-requires = ["scikit-build-core",  "cython >= 3.0.2", "numpy >= 1.26.4"]
+requires = ["scikit-build-core", "cython >= 3.0.2", "numpy >= 1.26.4"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
 experimental = true
-
-[tool.meson-python]
-limited-api = true
 
 [tool.rye]
 managed = true
